--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,7 @@
                 <h3 class="dev-name">BNGX</h3>
                 <p class="dev-role">BNGX PANEL</p>
                 <p class="dev-description">Site creator</p>
-                <a href="https://t.me/BNGXXXX" target="_blank" class="btn">
+                <a href="https://t.me/BNGX_KING" target="_blank" class="btn">
                     <i class="fab fa-telegram-plane"></i> Contact via Telegram
                 </a>
             </div>
