--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@ function displayAddLikesResult(d){
 }
 
 document.addEventListener('DOMContentLoaded', ()=>{
-    // Add Likes
+    // Maintenance Likes صيانة
     const btnLikes = document.getElementById('add-likes-btn');
     btnLikes.addEventListener('click', async ()=>{
         const id = document.getElementById('like-id-input').value.trim();
